<resources>
    <string name="app_name">Planets</string>
    <string name="search_title">Search</string>
    <string name="action_settings">Settings</string>
    <string-array name="navigation_drawer_items">
        <item>Planets</item>
        <item>Planets</item>
        <item>Stars</item>
        <item>Moons</item>
        <item>Other</item>
    </string-array>
    <string-array name="mars_moons">
        <item>Phobos</item>
        <item>Deimos</item>
    </string-array>
    <string-array name="jupiter_moons">
        <item>Europa</item>
        <item>Io</item>
        <item>Ganymede</item>
        <item>Calypso</item>
    </string-array>
    <string name="settings">Settings</string>
    <string-array name="colorEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string-array name="colors">
        <item name="1">Red</item>
        <item name="2">Orange</item>
        <item name="3">Blue</item>
        <item name="4">Green</item>
        <item name="5">Purple</item>
        <item name="6">Dark</item>
    </string-array>
    <string-array name="themeEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string-array name="themes">
        <item name="1">Light</item>
        <item name="2">Dark</item>
        <item name="3">Automatic</item>
    </string-array>
    <string-array name="sortEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string-array name="sorts">
        <item name="1">Traditional</item>
        <item name="2">A - Z</item>
        <item name="3">Z - A</item>
        <item name="4">Smallest to Largest</item>
        <item name="5">Largest to Smallest</item>
    </string-array>
    <string-array name="donations">
        <item name="1">$1</item>
        <item name="2">$5</item>
        <item name="3">$10</item>
        <item name="4">$25</item>
        <item name="5">$50</item>
    </string-array>
    <string name="phobos_sub_title_1">Data</string>
    <string name="phobos_description">Dimensions: 27 × 22 × 18 km\nMean radius: 11.2667 km (1.76941 mEarths)\nMass: 1.0659×1016 kg (17.8477 nEarths)\nMean density: 1.876 g/cm cubed\nEquatorial Surface Gravity: 0.0057 m/s squared (581.4 µg)\nEscape Velocity: 11.39 m/s (41 km/h)\nTemperature ≈ 233 K\nApparent magnitude: 11.3</string>
    <string name="phobos_sub_title_2">Facts</string>
    <string name="phobos_description_2">In the early 17th century, German astronomer Johannes Kepler proposed that Mars might host two moons, given that it lay between the Earth and Jupiter, which were known to have one and four satellites. No evidence of such moons could be found. Although most people thought that Mars had no moons, American astronomer Asaph Hall performed a methodical study from the U.S. Naval Observatory in Washington, D.C., searching closer to the planet than previous surveys.\n\nAfter searching without success, a frustrated Hall was about to give up but his wife, Angelina, urged him to continue. The next night, August 12, 1877, he discovered the moon that would later be known as Deimos. Six days later, he found Phobos as well. The two moons lay so close to their primary that they were hidden by the planet\'s glare. Asteroid-sized, they are also two of the smallest moons in the solar system, with the larger Phobos 7.24 times as massive as its companion, Deimos.</string>
    <string name="sun_sub_title_1">Data</string>
    <string name="sun_description">Age: 4.6 Billion Years\nType: Yellow Dwarf (G2V)\nDiameter: 1,392,684 km\nCircumference at Equator: 4,370,005.6 km\nMass: 1.9891×10^21 billion kg (333,060 x Earth)\nSurface Temperature: 5500 °C</string>
    <string name="sun_sub_title_2">Facts</string>
    <string name="sun_description_2" formatted="false">The sun is the center of our solar system, and the Earth revolves around it at a distance of about 93 million miles, although this distance varies throughout the year because of the Earth’s elliptical orbit around the sun. The distance between the Earth and the Sun is called an Astronomical Unit or AU. It takes a little over eight minutes for light from the sun to reach the Earth. Like the Earth, the sun is also traveling in orbit around the center of the Milky Way. It travels at 220 kilometers a second. \n\nThe sun is a yellow dwarf star with a mass of 1.989 x1030   kilograms, about 330,000 times greater than that of Earth. It is about 70% hydrogen, and the rest of its mass is helium.  \n\nThe circumference of the sun is 1,3902,684 km, and its surface area is 11,990 time that of Earth. One million Earths could fit inside the sun! The sun is the one object that has been observed in nature that is closest to having the shape of perfect sphere. \n\nTemperatures at the core of the sun can reach 15 million degrees Celsius, and the temperature at the surface is about 5500 degrees Celsius. The sun creates energy through nuclear fusion, as hydrogen is converted to helium in its core. The sun controls Earth’s climate and makes life on Earth possible. \n\nBecause the sun has a strong magnetic field, there are magnetic storms in which solar flares are released. We see those flares as sunspots. \n\nThe sun also generates solar wind, a stream of charged particles that travels through the solar system at about 40 kilometers per second. </string>
    <string name="mercury_sub_title_1">Data</string>
    <string name="mercury_description">Mass: 3.30104×10^14 billion kg (0.055 x Earth)\nEquatorial Diameter: 4,879\nPolar Diameter: 4,879\nEquatorial Circumference: 15,329 km\nKnown Satellites: none\nNotable Satellites: none\nOrbit Distance: 57,909,227 km (0.39 AU)\nOrbit Period: 87.97 Earth days\nSurface Temperature: -173 to 427°C\nFirst Record: 14th century BC\nRecorded By: Assyrian astronomers</string>
    <string name="mercury_sub_title_2">Facts</string>
    <string name="mercury_description_2" formatted="false">Mercury is the closest planet to the sun. Because of its highly elliptical orbit, its distance from the sun can range from 46 to 70 million kilometers. It is nearly tidally locked, so it rotates three times around its axis in two of its “years” or orbits. A year on Mercury is 88 days long, but one day is the same as 176 Earth days. Because of its speedy orbit, the planet was named after the winged Roman messenger to the gods, Mercury. \n\nMercury is the smallest planet in our solar system. Its diameter is 4,879 kilometers, while Earth’s is 12,742 kilometers. Even though it is small, Mercury’s density (5.4 grams/cubic centimeter) is second only to Earth’s. This is because Mercury is composed of heavy metals and rock. \n\Mercury’s temperatures range from up to 427 degrees Celsius on the side that faces the sun most of the time and -173 degrees Celsius on the alternate side. There is no atmosphere to aid in regulating the temperatures. \n\nMercury’s surface is wrinkled. These wrinkles, called, Lobate Scarps can be as much as a mile high and hundreds of miles long. \n\nTwo spacecraft have visited Mercury: Mariner 10 and Messenger, and they have brought back much information about Mercury.</string>
    <string name="venus_sub_title_1">Data</string>
    <string name="venus_description">Mass: 4.86732×10^15 billion kg (0.815 x Earth)\nEquatorial Diameter: 12,104 km\nPolar Diameter: 12,104 km\nEquatorial Circumference: 38,025 km\nKnown Satellites: none\nNotable Satellites: none\nOrbit Distance: 108,209,475 km (0.73 AU)\nOrbit Period: 224.70 Earth days\nSurface Temperature: 462 °C\nFirst Record: 17th century BC\nRecorded By: Babylonian astronomers</string>
    <string name="venus_sub_title_2">Facts</string>
    <string name="venus_description_2" formatted="false">Venus is the second planet from the sun, and it is often thought of as Earth’s sister planet because the two are so similar in size, density, composition, and gravity. Both have a central core, a molten mantle, and a crust. Venus, however, is not hospitable to life. \n\nVenus is the hottest planet in the solar system even though it is not the closest to the sun. The average surface temperature is 462 degrees Celsius, and there are no seasonal variations because Venus does not tilt on its axis. The temperatures are so high because of the dense atmosphere made up of 96.5% carbon dioxide. Venus also has clouds of sulfuric acid and many volcanos, and it is quite dry. Atmospheric pressure on Venus is 92% greater than on Earth.\n\nVenus is the second brightest object in the night sky. The moon is the brightest. It is named after the goddess of love, maybe because of its brightness. It is also known as the Morning Star and the Evening Star because when its orbit around the Sun overtakes Earth’s orbit, it changes from being visible after sunset to being visible before sunrise. Early civilizations thought Venus was two different bodies. Mayan astronomers made detailed observations of Venus as early as 650 AD. \n\nVenus rotates counter-clockwise (retrograde rotation), and it takes 243 Earth days for it to rotate once on its axis. A day on Venus lasts longer than an Earth year, and its orbit around the sun takes 225 Earth days. Unlike most other planets in our solar system Venus has no natural satellites. \n\nMany spacecraft have visited Venus, but its atmosphere, volcanic activity, and heat make it difficult to study.</string>
    <string name="jupiter_sub_title_1">Data</string>
    <string name="jupiter_description">Mass: 1.89813×10^18 billion kg (317.83 x Earth)\nEquatorial Diameter: 142,984 km\nPolar Diameter: 133,709 km\nEquatorial Circumference: 439,264 km\nKnown Satellites: 67\nNotable Satellites: Io, Europa, Ganymede, and Callisto\nOrbit Distance: 778,340,821 km (5.20 AU)\nOrbit Period: 4,332.82 Earth days (11.86 Earth years)\nSurface Temperature: -108°C\nFirst Record: 7th or 8th century BC\nRecorded By: Babylonian astronomers</string>
    <string name="jupiter_sub_title_2">Facts</string>
    <string name="jupiter_description_2" formatted="false">Jupiter is the fifth planet from the Sun. It is two and a half times more massive than all the other planets in the solar system combined, and it is made primarily of gases. It is, therefore, known as a “gas giant.” Its diameter is 142,984 kilometers, and its mass is 317.83 times that of Earth. \n\nJupiter is named after the king of the Roman gods and has also been called Zeus, after the Greek god of thunder and Marduk, after the Mesopotamian god and patron of the city of Babylon. \n\n\ Jupiter is the third brightest object in the solar system. It is one of five planets that can be seen with the naked eye; the others are Mercury, Venus, Mars and Saturn. \n\nJupiter spins faster than any other planet, taking a little under 10 hours to complete a turn on its axis. This rapid spin makes Jupiter bulge at the equator and flatten at the poles, making the planet about seven percent wider at the equator than at the poles. It orbits 778,340,821 kilometers from the sun and takes more than eleven Earth years to complete its orbit. \n\nJupiter’s most recognizable feature is the Great Red Storm. This is a storm that has been raging for at least 350 years, and it is large enough for two Earths to fit inside of it.\n\nJupiter’s larger moon Ganymede is the largest moon in the solar system, with a diameter of 5,268 kilometers. It is larger than the planet Mercury.\n\nJupiter has two rings thought to be composed of material from its moons where they have been struck by meteorites.</string>
</resources>