<!--
  Copyright 2014 Soichiro Kashima

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
--><!--suppress AndroidElementNotAllowed -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/flexible_space_image_height"
        android:scaleType="centerCrop"
        android:src="@drawable/sun"
        android:contentDescription="image" />

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/flexible_space_image_height" />

    <com.github.ksoichiro.android.observablescrollview.ObservableScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/flexible_space_image_height"
                android:background="@android:color/transparent" />

            <RelativeLayout
                android:id="@+id/sunCard1"
                android:background="@drawable/layer_card_background"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:padding="16dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sun_sub_title_1"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:text="@string/sun_sub_title_1"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/sun_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sun_sub_title_1"
                    android:layout_centerHorizontal="false"
                    android:text="@string/sun_description"
                    android:textSize="17sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/sunCard2"
                android:background="@drawable/layer_card_background"
                android:layout_width="match_parent"
                android:padding="16dp"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/sun_sub_title_2"
                    android:paddingBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:text="@string/sun_sub_title_2"
                    android:textSize="27sp" />

                <TextView
                    android:id="@+id/sun_description_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/sun_sub_title_2"
                    android:layout_centerHorizontal="false"
                    android:text="@string/sun_description_2"
                    android:textSize="17sp" />
            </RelativeLayout>

        </LinearLayout>
    </com.github.ksoichiro.android.observablescrollview.ObservableScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_standard">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:lines="2"
            android:minHeight="?attr/actionBarSize"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/flexible_space_image_height"
            android:background="@android:color/transparent" />
    </LinearLayout>
</FrameLayout>
